2007-03-29  David Smith  <dsmith@redhat.com>

	PR 4281
	* main.cxx (main): Validates '-m NAME' option.  Chops off '.ko' if
	present.  Makes sure name isn't empty.  Makes sure name is only
	composed of characters [_a-zA-Z0-9].

2007-03-28  David Smith  <dsmith@redhat.com>

	PR 2341 (partial fix)
	* elaborate.h (struct derived_probe): Added needs_global_locks()
	member function.  Unless overridden, will return true indicating
	that this probe needs locks around global variable references.
	* tapsets.cxx (struct be_derived_probe): Added override of default
	needs_global_locks() returning false.  begin/end probes don't
	need locks around global variables, since they aren't run
	concurrently with any other probes.
	* translate.cxx (c_unparser::emit_common_header): Updated
	probe_contents logic to match the logic in emit_probe.
	(c_unparser::emit_probe): Added whether the probe needs global
	variable locks to the probe string (that helps eliminate duplicate
	probes).  The generated C changes based on whether or not global
	variable locks are needed, but the pass 2 output doesn't differ
	between a probe that needs global variable locks and one that
	doesn't.  If the probe doesn't need global variable locks, doesn't
	output them.
	
2007-03-26  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bumped version to 0.5.14.
	* configure: Regenerated.

2007-03-26  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwflpp::translate_final_fetch_or_store): Improved
	error messages for invalid types.

	* elaborate.cxx (typeresolution_info::invalid): Improved the error
	message for invalid operators.

2007-03-22  Frank Ch. Eigler  <fche@elastic.org>

	PR 4224.
	* staptree.h (probe): Add privileged field.
	* elaborate.cxx, parse.cxx: Pass privileged flag to probes.
	* tapsets.cxx (dwarf_query): Add has_absolute field.
	(dwarf_derived_probe ctor): Tolerate it.
	(register_patterns): Expose it.
	(dwarf_builder::build): Implement it with no dwfl whatsoever.